@@ -84,6 +84,15 @@ func New(opts ...configOption) (*App, error) {
 		apmOpts = append(apmOpts, apmproxy.WithReceiverAddress(fmt.Sprintf(":%s", port)))
 	}
 
+	if bufferSize := os.Getenv("ELASTIC_APM_LAMBDA_AGENT_DATA_BUFFER_SIZE"); bufferSize != "" {
+		size, err := strconv.Atoi(bufferSize)
+		if err != nil {
+			return nil, err
+		}
+
+		apmOpts = append(apmOpts, apmproxy.WithAgentDataBufferSize(size))
+	}
+
 	apmOpts = append(apmOpts, apmproxy.WithURL(os.Getenv("ELASTIC_APM_LAMBDA_APM_SERVER")))
 
 	ac, err := apmproxy.NewClient(apmOpts...)
